@@ -1,5 +1,8 @@
 2018-06-20  Jakub Jelinek  <jakub@redhat.com>
 
+	PR debug/86194
+	* gcc.target/i386/pr86194.c: New test.
+
 	PR tree-optimization/86231
 	* gcc.dg/tree-ssa/vrp119.c: New test.
 	* gcc.c-torture/execute/pr86231.c: New test.
