@@ -1,5 +1,9 @@
 2018-06-20  Jakub Jelinek  <jakub@redhat.com>
 
+	PR debug/86194
+	* var-tracking.c (use_narrower_mode_test): Check if shift amount can
+	be narrowed.
+
 	PR tree-optimization/86231
 	* tree-vrp.c (union_ranges): For (  [  )  ] or (   )[   ] range and
 	anti-range don't overwrite *vr0min before using it to compute *vr0max.
